--- a/parsing_tutorial.html
+++ b/parsing_tutorial.html
@@ -36,7 +36,7 @@
     </tbody>
 </table>
 <script>
-    // .. CONSTANTS
+    // -- CONSTANTS
 
     var TOKEN_TYPE_None = 0;
     var TOKEN_TYPE_ShortComment = 1;
@@ -48,7 +48,7 @@
     var TOKEN_TYPE_Operator = 7;
     var TOKEN_TYPE_Separator = 8;
 
-    // .. CLASSES
+    // -- TYPES
 
     function TOKEN( text, token_type, line_index )
     {
@@ -89,7 +89,7 @@
         }
     }
 
-    // .. VARIABLES
+    // -- VARIABLES
 
     var
         LineIndex,
@@ -99,7 +99,7 @@
         TokenCount,
         TokenIndex;
 
-    // .. FUNCTIONS
+    // -- FUNCTIONS
 
     function Print( text )
     {
@@ -1279,6 +1279,8 @@
 
         Compile();
     }
+    
+    // ~~
     
     Test();
 </script>
