--- a/transpiler.html
+++ b/transpiler.html
@@ -1,15 +1,15 @@
 <!--
-    This file is part of the ParsingTutorial distribution.
+    This file is part of the TranspilerTutorial distribution.
 
-    https://github.com/senselogic/PARSING_TUTORIAL
+    https://github.com/senselogic/TRANSPILER_TUTORIAL
 
     Copyright (C) 2017 Eric Pelzer (ecstatic.coder@gmail.com)
 
-    ParsingTutorial is free software: you can redistribute it and/or modify
+    TranspilerTutorial is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, version 3.
 
-    ParsingTutorial is distributed in the hope that it will be useful,
+    TranspilerTutorial is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
